--- a/Templates/AppSource App/.github/AL-Go-Settings.json
+++ b/Templates/AppSource App/.github/AL-Go-Settings.json
@@ -1,4 +1,5 @@
 {
     "type":  "AppSource App",
+    "useProjectDependencies":  true,
     "templateUrl":  "https://github.com/microsoft/AL-Go-AppSource@main"
 }
