--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ incremental: false
 highlighter: rouge
 markdown: kramdown
 remote-theme: pages-themes/midnight@v0.2.0
-baseurl: https://freddydk.github.io/AL-Go/
+baseurl: AL-Go/
 gist:
   noscript: false
 kramdown:
