--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,11 @@ incremental: false
 highlighter: rouge
 markdown: kramdown
 remote-theme: pages-themes/midnight@v0.2.0
+title: AL-Go for GitHub
+description: The plug-and-play DevOps solution for Business Central app development on GitHub
 baseurl: AL-Go/
 gist:
   noscript: false
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-defaults:
-  - scope:
-      path: ""
-    values:
-      title: "AL-Go for GitHub"
-      description: "The plug-and-play DevOps solution for Business Central app development on GitHub"
