--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme
 - jekyll-responsive_image
